# OpenServerManager

./: CMakeLists.txt  README.md  icons.qrc  main.cpp
include/: ServerData.h
include/data/: DataManager.h
include/dialogs/: ConsoleOutputDialog.h  ServerInfoDialog.h
include/pages/: ServersPage.h
include/server/: ServerPreview.h
src/: MainWindow.cpp  ServerData.cpp
src/data/: DataManager.cpp
src/dialogs/: ConsoleOutputDialog.cpp  ServerInfoDialog.cpp
src/pages/: ServersPage.cpp
src/server/: ServerPreview.cpp
ui/: MainWindow.ui
ui/dialogs/: ConsoleOutputDialog.ui  ServerInfoDialog.ui
ui/pages/: ServersPage.ui
ui/server/: ServerPreview.ui
